force-app/main/default/objects/Quest__c/Quest__c.object-meta.xml
<CustomObject>
    <label>Quest</label>
    <nameField>
        <label>Quest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>