force-app/main/default/objects/Quest__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <precision>6</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>