force-app/main/default/objects/Quest__c/fields/MaxStepMonsters__c.field-meta.xml
<CustomField>
    <fullName>MaxStepMonsters__c</fullName>
    <label>Max Step Monsters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>