force-app/main/default/objects/Quest__c/fields/MaxSteps__c.field-meta.xml
<CustomField>
    <fullName>MaxSteps__c</fullName>
    <description>The maximum allowed Steps for this Quest.</description>
    <inlineHelpText>The maximum allowed Steps for this Quest.</inlineHelpText>
    <label>Max Steps</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>