force-app/main/default/objects/Quest__c/fields/MinStepMonsters__c.field-meta.xml
<CustomField>
    <fullName>MinStepMonsters__c</fullName>
    <label>Min Step Monsters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>