force-app/main/default/objects/Quest__c/fields/MinSteps__c.field-meta.xml
<CustomField>
    <fullName>MinSteps__c</fullName>
    <description>The minimum allowed Steps for this Quest.</description>
    <inlineHelpText>The minimum allowed Steps for this Quest.</inlineHelpText>
    <label>Min Steps</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>