force-app/main/default/objects/Quest__c/fields/PreviousQuest__c.field-meta.xml
<CustomField>
    <fullName>PreviousQuest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When populated, this represents the chain of Quests in a Game. The first Quest does not have this field populated.</description>
    <inlineHelpText>When populated, this represents the chain of Quests in a Game. The first Quest does not have this field populated.</inlineHelpText>
    <label>Previous Quest</label>
    <referenceTo>Quest__c</referenceTo>
    <relationshipLabel>Next Quests</relationshipLabel>
    <relationshipName>NextQuests</relationshipName>
    <type>Lookup</type>
</CustomField>