force-app/main/default/objects/Quest__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this Quest is part of the main storyline.</description>
    <inlineHelpText>When checked, this Quest is part of the main storyline.</inlineHelpText>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>